--- a/package.json
+++ b/package.json
@@ -4,13 +4,15 @@
     "description": "",
     "main": "index.js",
     "scripts": {
-      "test": "echo \"Error: no test specified\" && exit 1"
+        "test": "echo \"Error: no test specified\" && exit 1"
     },
     "keywords": [],
     "author": "",
     "license": "ISC",
     "devDependencies": {
-      "parcel-bundler": "^1.12.4"
+        "parcel-bundler": "^1.12.4"
+    },
+    "dependencies": {
+        "parcel": "^2.10.2"
     }
-  }
-  
+}
