--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-    "name": "Moshify",
+    "name": "Synthify",
     "version": "1.0.0",
     "description": "",
-    "main": "index.html",
+    "main": "index.js",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1"
     },
